@@ -5,6 +5,8 @@
 Version 1.4.11 - SVN
 --------------------
   - Fix display of X-Priority in message view.
+  - Work around mailers sending broken Date headers with no space after the
+    first comma.
 
 Version 1.4.10a - 10 May 2007
 -----------------------------
